# con-simple-chat-ollama

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: main.py
app/: ask_model.py
backend/: __init__.py  api_scaffold.py  ask_model.py
docker/: entrypoint.sh
frontend/: README.md
scripts/: example_api.py  example_direct.py
